# uname

./: .gitignore  Makefile.am  README  acinclude.m4  configure.ac  uname.1  uname.1.html  uname.1.xml  uname.c
C/: Makefile.am  UXuname.msg
en_GB/: Makefile.am  UXuname.msg
